account added to ops panel, other ops features
